Add FIXME statement about CSRF and CORS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ keycloak.public-client=true
 
 task.template.allowMultipleTasks=true
 management.endpoints.web.exposure.include=*
-management.metrics.enable.http=false
+#management.metrics.enable.http=false
